iOS overflow fix

--- a/css/post/midwestjs1.css
+++ b/css/post/midwestjs1.css
@@ -8,8 +8,14 @@
 	color: #2E6358;
 }
 
+[role="main"] {
+	/* iOS can be a real pain... */
+	overflow-x: hidden;
+}
+
 .header {
-	padding: 1px 1px 60px;
+	width: 100%;
+	padding: 1px 0 60px;
 	background: #256F72 url('/img/minneapolis_landscape.jpg') bottom center;
 	background-size: cover;
 	color: #722825;
